# edx-enterprise-data

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  api-compact.yaml  api.yaml  catalog-info.yaml  codecov.yml  manage.py  openedx.yaml  pylintrc  pylintrc_backup  pylintrc_tweaks  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: ci.yml  mysql8-migrations.yml  pypi-publish.yml  release.yml  upgrade-python-requirements.yml
doc/: data_flow_to_admin_page.puml  data_flow_to_pipeline.puml  data_flow_to_tableau.puml
enterprise_data/: __init__.py  apps.py  clients.py  constants.py  exceptions.py  filters.py  models.py  paginators.py  permissions.py  renderers.py  rules.py  signals.py  urls.py  utils.py
enterprise_data/admin/: __init__.py
enterprise_data/admin_analytics/: completions_utils.py  constants.py  data_loaders.py  database.py  utils.py
enterprise_data/admin_analytics/database/: __init__.py  utils.py
enterprise_data/api/: urls.py
enterprise_data/api/v0/: __init__.py  serializers.py  urls.py  views.py
enterprise_data/api/v1/: __init__.py  paginators.py  serializers.py  urls.py  views.py
enterprise_data/cache/: __init__.py  decorators.py
enterprise_data/fixtures/: enterprise_enrollment.json  enterprise_subsection_grade.json  enterprise_user.json
enterprise_data/management/commands/: create_dummy_data.py  create_dummy_data_lpr_v1.py  create_enterprise_enrollment.py  create_enterprise_learner_enrollment_lpr_v1.py  create_enterprise_learner_lpr_v1.py  create_enterprise_offer.py  create_enterprise_user.py  pre_warm_analytics_cache.py
enterprise_data/migrations/: 0001_initial.py  0002_auto_20180430_1358.py  0003_auto_20180501_0603.py  0004_auto_20180501_0928.py  0004_auto_20180508_1652.py  0005_auto_20180524_2204.py  0006_auto_20180612_0336.py  0007_auto_20180612_0534.py  0008_auto_20180614_0108.py  0009_auto_20180628_1152.py  0010_enterpriseenrollment_created.py  0011_enterpriseuser.py  0012_auto_20180831_1930.py  0012_enterpriseenrollment_enrolled_enterprise_user.py  0013_auto_20180830_1549.py  0013_auto_20180831_1931.py  0014_auto_20180904_1405.py  0014_enterpriseuser_created.py  0015_auto_20180907_1757.py  0016_auto_20180924_2138.py  0017_enterpriseenrollment_unenrollment_timestamp.py  0018_enterprisedatafeaturerole_enterprisedataroleassignment.py  0019_add_enterprise_data_feature_roles.py  0020_add_role_based_access_control_switch.py  0021_auto_20190329_1241.py  0021_enterprisedataroleassignment_enterprise_id.py  0022_remove_role_based_access_control_switch.py  0023_enterpriselearner.py  0023_enterpriselearner_enterpriselearnerenrollment.py  0023_enterprisesubsectiongrade.py  0024_auto_20210526_0737.py  0024_auto_20210601_0658.py  0024_auto_20210602_1811.py  0025_auto_20210703_1854.py  0026_auto_20210916_0414.py  0027_enterpriselearnerenrollment_total_learning_time_seconds.py  0028_enterpriselearnerenrollment_offer_id.py  0029_enterpriseoffer.py  0030_auto_20230609_1353.py  0030_enterpriselearnerenrollment_add_primary_key_field.py  (+30 more)
enterprise_data/settings/: test.py
enterprise_data/tests/: __init__.py  factories.py  mixins.py  test_clients.py  test_filters.py  test_models.py  test_permissions.py  test_utils.py  test_views.py
enterprise_data/tests/admin_analytics/: mock_analytics_data.py  mock_enrollments.py  test_analytics_engagements.py  test_analytics_enrollments.py  test_analytics_leaderboard.py  test_data_loaders.py  test_enterprise_completions.py  test_utils.py
enterprise_data/tests/lpr/: test_lpr_data_source_base.py  test_lpr_data_source_snowflake.py
enterprise_data_roles/: admin.py  apps.py  constants.py  models.py  rules.py
enterprise_data_roles/migrations/: 0001_initial.py  0002_add_enterprise_data_feature_roles.py  0003_add_role_based_access_control_switch.py  0004_enterprisedataroleassignment_enterprise_id.py  0005_turn_on_role_based_access_control_switch.py  0006_remove_role_based_access_control_switch.py  0006_turn_off_role_based_access_control_switch.py  0007_enterprisedataroleassignment_applies_to_all_contexts.py  0008_mariadb_uuid_conversion.py
enterprise_data_roles/tests/: factories.py  test_models.py
enterprise_reporting/: __init__.py  constants.py  delivery_method.py  export_edxapp_data.py  external_resource_link_report.py  reporter.py  reporter.py.rej  send_enterprise_reports.py  utils.py  utils.py.rej
enterprise_reporting/clients/: __init__.py  enterprise.py  s3.py  snowflake.py  vertica.py
enterprise_reporting/tests/: test_clients.py  test_delivery_method.py  test_enterprise_client.py  test_export_edxapp_data.py  test_external_link_report.py  test_reporter.py  test_send_enterprise_reports.py  test_utils.py  test_vertica_client.py  utils.py
requirements/: base.in  base.txt  ci.in  ci.txt  common_constraints.txt  constraints.txt  dev-enterprise_data.in  dev-enterprise_reporting.in  dev.in  dev.txt  django.txt  pip.in  pip.txt  pip_tools.in  pip_tools.txt  quality.in  quality.txt  reporting.in  test-master.in  test-master.txt  test-reporting.in  test-reporting.txt  test.in  test.txt  travis.txt
src/enterprise_data/: __init__.py  apps.py  constants.py  filters.py  renderers.py  utils.py
src/enterprise_data/admin_analytics/: constants.py
src/enterprise_data/cache/: decorators.py
src/enterprise_data/fixtures/: enterprise_user.json
src/enterprise_data/migrations/: 0003_auto_20180501_0603.py  0004_auto_20180501_0928.py  0008_auto_20180614_0108.py  0009_auto_20180628_1152.py  0012_auto_20180831_1930.py  0013_auto_20180831_1931.py  0014_enterpriseuser_created.py  0015_auto_20180907_1757.py  0016_auto_20180924_2138.py  0017_enterpriseenrollment_unenrollment_timestamp.py  0018_enterprisedatafeaturerole_enterprisedataroleassignment.py  0019_add_enterprise_data_feature_roles.py  0020_add_role_based_access_control_switch.py  0024_auto_20210602_1811.py  0025_auto_20210703_1854.py  0026_auto_20210916_0414.py  0029_enterpriseoffer.py  (+9 more)
src/enterprise_data_roles/: __init__.py  apps.py  constants.py  models.py
src/enterprise_reporting/: __init__.py
(+94 files in other folders)
