[build-system]
requires = ["setuptools", "setuptools-scm>8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "edx-enterprise-data"
description = "Enterprise Reporting"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    {name = "edX", email = "oscm@edx.org"},
]
classifiers = [
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
]

dynamic = ["readme", "version"]

dependencies = [
    "requests",
    "edx-rest-api-client",
    "edx-django-utils",
    "edx-drf-extensions",
    "edx-opaque-keys",
    "Django",
    "django-fernet-fields-v2",
    "djangorestframework-csv",
    "django-filter",
    "django-model-utils",
    "edx-rbac",
    "rules",
    "factory_boy",
    "mysql-connector-python",
    "snowflake-connector-python",
]

[project.optional-dependencies]
reporting = [
    "awscli",
    "boto3",
    "celery==5.3.6",
    "cryptography",
    "paramiko",
    "PGPy",
    "pyminizip",
    "unicodecsv==0.14.1",
    "vertica-python",
    "snowflake-connector-python",
    "py2neo @ https://github.com/overhangio/py2neo/releases/download/2021.2.3/py2neo-2021.2.3.tar.gz",
]

[project.urls]
Homepage = "https://github.com/openedx/edx-enterprise-data"
Repository = "https://github.com/openedx/edx-enterprise-data"

[dependency-groups]
test-base = [
    "ddt",
    "django-model-utils",
    "factory_boy",
    "freezegun",
    "mock",
    "pytest-cov",
    "pytest-django",
    "responses",
    "testfixtures",
    "flaky",
]
test = [
    {include-group = "test-base"},
    "edx-enterprise-data[reporting]",
    "djangorestframework",
]
test-reporting = [
    "edx-enterprise-data[reporting]",
    "responses",
    "tox",
    "pytest==8.0.2",
    "ddt==1.1.2",
    "mock==2.0.0",
    "pytest-cov==4.1.0",
]
quality = [
    {include-group = "test"},
    "edx-lint",
    "isort",
    "pycodestyle",
    "pydocstyle",
    "testfixtures",
]
ci = [
    "coverage",
    "tox",
    "tox-uv",
]
dev = [
    {include-group = "quality"},
    {include-group = "test-reporting"},
    {include-group = "ci"},
    "diff-cover",
    "edx-i18n-tools",
    "twine",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["enterprise_data*", "enterprise_reporting*", "enterprise_data_roles*"]
exclude = ["*tests*"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.semantic_release]
# Existing release tags are bare version numbers (e.g. "10.22.8"), not the
# "v{version}" python-semantic-release defaults to. Without this, semantic-release
# wouldn't recognize any prior release and would restart versioning from scratch.
tag_format = "{version}"
build_command = "pip install build && SETUPTOOLS_SCM_PRETEND_VERSION=$NEW_VERSION python -m build"

[tool.uv]
# Every `uv sync`/`uv run` invocation in this repo names an explicit --group.
# Without this, uv's implicit default group (named "dev") would be synced *in
# addition* to whatever --group is passed, silently pulling the entire
# dev/reporting superset into every target, defeating the point of having
# separate groups.
default-groups = []
#  DO NOT EDIT constraint-dependencies DIRECTLY.
#  This list is managed by `edx_lint write_uv_constraints`
#  and will be overwritten the next time `make upgrade` is run.
#  - GLOBAL constraints: edit edx_lint/files/common_constraints.txt
#  - REPO-SPECIFIC constraints: edit [tool.edx_lint].uv_constraints in this file
constraint-dependencies = [
    "Django<5",
    "elasticsearch<7.14.0",
    "mysql-connector-python<9.6",
]

[tool.edx_lint]
uv_constraints = [
    # This package is installed in the edx-analytics-data-api service,
    # which only supports Django<5. We're hard pinning here, too, to avoid
    # dependency management hell of supporting both Django 4 and 5.
    "Django<5",
    # AED 2026-02-04: No idea why we can't find version 9.6
    "mysql-connector-python<9.6",
]

[tool.isort]
line_length = 120
known_django = ["django"]
known_djangoapp = ["model_utils"]
known_first_party = ["enterprise_data", "enterprise_reporting", "enterprise_data_roles"]
include_trailing_comma = true
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "DJANGOAPP", "EDX", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "enterprise_data.settings.test"
addopts = "--cov enterprise_reporting --cov enterprise_data --cov enterprise_data_roles --cov-report term-missing --cov-report xml"
norecursedirs = [".*", "docs", "requirements", "node_modules"]
